--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -43,6 +43,8 @@ build/
 .flutter-version
 .pub/
 firebase_options.dart
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
 
 # iOS
 ios/Pods/
