--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -42,7 +42,7 @@ build/
 .flutter-plugins-dependencies
 .flutter-version
 .pub/
-firebase_options.dart
+lib/firebase_options.dart
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 
